# cultivate-mapping-pipeline

./: .env.example  .gitignore  .sqlfluff  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  DESIGN_DECISIONS.md  LICENSE  OPERATIONAL_SCALE.md  README.md  profiles.yml.example  pyproject.toml
analysis/: README.md
dbt/: README.md  dbt_project.yml
docs/: 00_data_model.md  01_security_redaction.md  02_data_model.md  internal_snowflake_ingestion_runbook.md  paper_links.md
evaluation/: README.md  accuracy_tracker.py  f1_score.py  precision_recall.py  reference_set.json
exploration/: README.md
governance/: contribution_log.md
infra/: README.md
ingestion/: README.md  agent_model.py  config.py  llm_classifier.py  scraper.py
models/: README.md  sources.yml
schema/: ERD.dbml  ERD.md  data_model.md
scripts/: README.md  auth_cache.py  azure_blob_sync.py  azure_sync.sh  check_dead_links.ipynb  check_dead_links.py  check_snowflake_sql.sh  classify_with_scraped_text.ipynb  classify_with_web_search.ipynb  io.py  load_sharecity200_tracker_run01.py  run_dbt.sh  run_evaluation.py  run_ingestion.py  run_snowflake_load.py  scrape_text.ipynb  test_normalize.py
snowflake/: 00_context.sql  00_context.sql.template  01_file_formats.sql  02_stages.sql.template  03_create_tables.sql  04_copy_into.sql  04_copy_into_validate.sql  05_dedup.sql  05_transforms.sql  06_validation.sql  07_powerbi_export.sql  07_publish_for_bi.sql  08_silver_powerbi_export.sql  README.md
terraform/: .gitignore  README.md  database.tf  file_formats.tf  outputs.tf  provider.tf  roles.tf  s3.tf  stages.tf  (+5 more)
(+128 files in other folders)
