[project]
name = "cultivate-mapping-pipeline"
version = "1.0.0"
description = "Data pipeline for mapping and validating food-sharing initiatives across European cities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "snowflake-connector-python>=3.12",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
azure = [
    "azure-storage-blob>=12.19",
    "azure-identity>=1.15",
]
exploration = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]
ingestion = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["ingestion", "evaluation", "scripts", "utils", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator suggestion
]

[tool.ruff.lint.isort]
known-first-party = ["ingestion", "evaluation", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
